<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.2.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.gopair</groupId>
	<artifactId>gopair-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>gopair-parent</name>
	<description>GoPair微服务架构父项目</description>

	<!-- 子模块声明 -->
	<modules>
		<module>gopair-common</module>
		<module>gopair-framework-web</module>
		<module>gopair-user-service</module>
		<module>gopair-gateway</module>
		<module>gopair-room-service</module>
		<module>gopair-message-service</module>
		<module>gopair-websocket-service</module>
		<module>gopair-voice-service</module>
		<module>gopair-file-service</module>
	</modules>

	<properties>
		<java.version>23</java.version>
		<gopair.version>0.0.1-SNAPSHOT</gopair.version>
		<mybatis-plus.version>3.5.12</mybatis-plus.version>
		<pagehelper.version>2.1.1</pagehelper.version>
		<knife4j.version>4.4.0</knife4j.version>
		<jjwt.version>0.11.5</jjwt.version>
		<spring-cloud.version>2023.0.0</spring-cloud.version>
		<spring-cloud-alibaba.version>2023.0.1.0</spring-cloud-alibaba.version>
		<micrometer-tracing.version>1.2.5</micrometer-tracing.version>
		<commons-fileupload.version>1.5</commons-fileupload.version>
		<commons-io.version>2.15.1</commons-io.version>
		<spring-boot-starter-amqp.version>3.2.5</spring-boot-starter-amqp.version>
		<minio.version>8.5.10</minio.version>
		<thumbnailator.version>0.4.20</thumbnailator.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- 内部模块版本管理 -->
			<dependency>
				<groupId>com.gopair</groupId>
				<artifactId>gopair-common</artifactId>
				<version>${gopair.version}</version>
			</dependency>
			<dependency>
				<groupId>com.gopair</groupId>
				<artifactId>gopair-framework-web</artifactId>
				<version>${gopair.version}</version>
			</dependency>

			<!-- Spring Cloud 依赖管理 -->
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Spring Cloud Alibaba 依赖管理 -->
			<dependency>
				<groupId>com.alibaba.cloud</groupId>
				<artifactId>spring-cloud-alibaba-dependencies</artifactId>
				<version>${spring-cloud-alibaba.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<!-- Micrometer Tracing 依赖管理 -->
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>micrometer-tracing-bom</artifactId>
				<version>${micrometer-tracing.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>micrometer-tracing-bridge-brave</artifactId>
				<version>${micrometer-tracing.version}</version>
			</dependency>
			<dependency>
				<groupId>io.zipkin.reporter2</groupId>
				<artifactId>zipkin-reporter-brave</artifactId>
				<version>2.16.3</version>
			</dependency>

			<!-- MyBatis 相关依赖 -->
			<dependency>
				<groupId>com.baomidou</groupId>
				<artifactId>mybatis-plus-spring-boot3-starter</artifactId>
				<version>${mybatis-plus.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.pagehelper</groupId>
				<artifactId>pagehelper-spring-boot-starter</artifactId>
				<version>${pagehelper.version}</version>
			</dependency>

			<!-- API文档 -->
			<dependency>
				<groupId>com.github.xiaoymin</groupId>
				<artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
				<version>${knife4j.version}</version>
			</dependency>

			<!-- JWT 依赖 -->
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-api</artifactId>
				<version>${jjwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-impl</artifactId>
				<version>${jjwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-jackson</artifactId>
				<version>${jjwt.version}</version>
			</dependency>

			<!-- 文件处理依赖 -->
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${commons-fileupload.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons-io.version}</version>
			</dependency>

			<!-- RabbitMQ 依赖 -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-amqp</artifactId>
				<version>${spring-boot-starter-amqp.version}</version>
			</dependency>

			<!-- MinIO 对象存储 -->
			<dependency>
				<groupId>io.minio</groupId>
				<artifactId>minio</artifactId>
				<version>${minio.version}</version>
			</dependency>

			<!-- Thumbnailator 图片缩略图生成 -->
			<dependency>
				<groupId>net.coobird</groupId>
				<artifactId>thumbnailator</artifactId>
				<version>${thumbnailator.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<excludes>
							<exclude>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
							</exclude>
						</excludes>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
